src/main/resources/static/css/style.css
html {
	font-family: "Open Sans";
	height: 100%;
}

body {
	background-color: #ededed;
}

h1 {
    font-weight: 300;
    font-size: 2em;
}

h3 {
    font-weight: 300;
    color: #686868;
}

.red-background {
	background-color: #A8162B;
}

/* HEADER */
header {
	background-color: white;
}

.logo {
	width: 300px;
	margin-bottom: 20px;
}

/* BUTTON */
button {
	cursor: pointer;
}

@media (min-width: 1400px) {
	.container{
		max-width: 1200px;
	}
}

/* WRAPPER */
.wrapper {
	/* white background thing */
	background-color: white;
	border-radius: 2px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    min-height: 1000px;
}

/* TITLE */
.form-heading {
	padding-bottom: 20px;
	border-bottom: 1px solid #EFEFEF;
	margin-top: 70px;
	font-weight: 300;
}

.auth-heading {
	font-weight: 300;
}

.calendar-icon {
	font-size: 2em;
	color: #A8162B;
}

.bottom-space {
	height: 100px;
}


/* TABLE */
th {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	text-transform: uppercase;
	font-weight: 300;
}

.search-group {
	position: relative;
}

.search-group .fa-search {
	position: absolute;
	top: 10px;
	right: 15px;
	z-index: 5;
}

.nav-pills .nav-link.active, .show>.nav-pills .nav-link {
	background-color: transparent;
	border-bottom: 3px solid #007bff;
	color: #007bff;
}

.nav-pills .nav-link {
	border-radius: 0;
}

.white-text {
	color: white;
}

/* BACK ARROW */
.back-arrow {
	width:36px;
	height:36px;
	position: absolute;
	left: -50px;
}

@media (max-width: 1000px) {
	.back-arrow {
		position: static;
	}
}

/* TABLE */
.table-striped tbody tr:nth-of-type(odd) {
	background-color: #F4F8FB;
}

.clickable {
    cursor: pointer;
}

/* REQUESTS */
/* font awesome */
.fa-sort {
	color: #c6c6c6;
}


/* LOADING ICON - edit if interferes with other svg */
svg path, svg rect {
    fill: #007bff;
}

/* V-CLOAK - hides element until vue loads eg. {{hidesThis}} */
[v-cloak] {
    display: none;
}

